<resources>
    <string name="app_name">presentation</string>

    <string name="date">Date</string>
    <string name="weather">Weather</string>
    <string name="details">Details</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_min">Temperature Min.</string>
    <string name="temperature_max">Temperature Max.</string>

    <string name="activity_favored_title">Favored Locations</string>
    <string name="activity_search_title">Search Locations</string>

    <string name="activity_favored_locations_menu_add">Add</string>

</resources>
